--- a/front-end/views/portal.html
+++ b/front-end/views/portal.html
@@ -8,13 +8,13 @@
     <meta name="author" content="mbey_koumatey"/>
     <title>Actualités</title>
     <link rel="shortcut icon" type="image/png" href="../images/icon.png">
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="../style.css"/>
   </head>
   <header>
     <nav>
       <div>
-        <img src="./images/logo.png">
-        <h1>Quoi de neuf? </h1>
+        <img class="logo" src="../images/icon-left-font-monochrome-black.svg">
+        <h1 class="title-page">Bienvenu sur votre espace social ! </h1>
           </div>
           
           </nav>
@@ -38,11 +38,19 @@
                               </section>
                               </main>
                               <!-- Footer -->
-                              <footer>
-                                
-                                <img class="footer_logo" src="images/logo.png" alt="logo Groupomania"/>
-                                <h2>Groupomania @2022</h2>
-                              </footer>
+                           
+    <footer>
+      <ul>
+<li><a href="#" title="">Help Center</a></li>
+<li><a href="#" title="">About</a></li>
+
+<li><a href="#" title="">Language</a></li>
+
+</ul>
+ <div class="copyright">
+        <p>Copyright © 2022 Groupomania - Tous droits réservés</p>
+      </div>
+   </footer> 
                               
                               
                               </body>
