modification du code, relecture

--- a/front-end/views/signup.html
+++ b/front-end/views/signup.html
@@ -32,7 +32,10 @@
         <label>Last Name</label>
         <input type="text" placeholder="Nom" />
      </div>
-    
+      <div>
+        <label>fonction</label>
+        <input type="text" placeholder="Fonction" />
+     </div>
  <div>
         <label>Email</label>
         <input type="text" placeholder="Email" />
